fixed wrapping

--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -73,6 +73,7 @@ a:visited {
 .team-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 0;
     padding: 0;
@@ -84,7 +85,7 @@ a:visited {
     flex-direction: column;
     justify-content: space-evenly;
     margin: 10px;
-    padding: 10px;
+    width: auto;
     background-color: var(--dk-blue);
     color: var(--wh-gray);
     border: 1px solid;
